fix overflow

--- a/css/main.sass
+++ b/css/main.sass
@@ -7,7 +7,7 @@ html, body
   width: 100%
   margin: 0
   padding: 0
-
+  overflow: hidden
 
 .is-exiting
   animation-direction: alternate-reverse
@@ -97,7 +97,6 @@ h1.intro
 .nav
   position: fixed
   height: 100vh
-  max-height: 100vh
   top: 0
   padding: 10px
   min-width: 60px
